# MyAutoPapers

./: .gitignore  AGENTS.md  Cargo.toml  README.md  README.md.bk  justfile
.github/: ISSUE_TEMPLATE.md  ISSUE_TEMPLATE.md.bk
.github/scripts/: check-bin.sh
.github/workflows/: cache-keeper.yaml  update.yaml
.issue/: README.md
.issue/items/: 2026-07-01_arxiv_low_volume_keywords.md
src/: arxiv.rs  main.rs  types.rs  utils.rs
