[package]
    name   ="my_paper"
    version="0.1.0"
    edition="2021"

[profile.release]
    lto          =true
    codegen-units=1
    strip        ="debuginfo"

[profile.dev.package."*"]
    opt-level=3

[dev-dependencies]

[dependencies]
    reqwest   ={version="0.11", features=["json"]}
    tokio     ={version="1.0", features=["full"]}
    chrono    ={version="0.4", features=["serde"]}
    chrono-tz ="0.8"
    serde     ={version="1.0", features=["derive"]}
    serde_json="1.0"
    feed-rs   ="1.3"
    anyhow    ="1.0"
    url       ="2.4"
    regex     ="1.10"
